--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server/index.js",
   "scripts": {
     "test": "jest server.test.js",
-    "server-dev": "npx nodemon --watch /server/index.js"
+    "server-dev": "npx nodemon --watch server/index.js",
+    "wipeDB": "node server/db/wipeDB.js",
+    "seedDB": "node server/db/seeder.js"
   },
   "repository": {
     "type": "git",
@@ -18,12 +20,17 @@
   },
   "homepage": "https://github.com/Hackreactor-SDC-Elara/Reviews#readme",
   "dependencies": {
+    "csv-parser": "^3.0.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.3.1",
     "mongodb": "^4.13.0",
+    "mongoose": "^6.8.4",
     "moongoose": "^0.0.5",
+    "mysql2": "^3.0.1",
     "nodemon": "^2.0.20",
+    "stream-to-mongo-db": "^1.6.0",
     "supertest": "^6.3.3"
   }
 }
