--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "test": "jest --coverage reviews.test.js",
     "server-dev": "npx nodemon --watch server/index.js",
     "wipeDB": "node server/db/wipeDB.js",
-    "seedDB": "node server/db/seeder.js"
+    "seedDB": "node server/db/seeder.js",
+    "k6getReview": "k6 run test/stressTest/getReviewsTest.js",
+    "k6getMeta": "k6 run test/stressTest/getMetaTest.js",
+    "k6postReview": "k6 run test/stressTest/postReviewsTest.js",
+    "k6putHelpful": "k6 run test/stressTest/putHelpfulTest.js",
+    "k6putReport": "k6 run test/stressTest/putReportTest.js"
   },
   "repository": {
     "type": "git",
@@ -20,17 +25,15 @@
   },
   "homepage": "https://github.com/Hackreactor-SDC-Elara/Reviews#readme",
   "dependencies": {
+    "cluster": "^0.7.7",
     "csv-parser": "^3.0.0",
-    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.3.1",
+    "k6": "^0.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.4",
-    "moongoose": "^0.0.5",
-    "mysql2": "^3.0.1",
     "nodemon": "^2.0.20",
-    "stream-to-mongo-db": "^1.6.0",
     "supertest": "^6.3.3"
   }
 }
