--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "test": "jest --coverage reviews.test.js",
+    "start": "node server/index.js",
     "server-dev": "npx nodemon --watch server/index.js",
     "wipeDB": "node server/db/wipeDB.js",
     "seedDB": "node server/db/seeder.js",
@@ -32,7 +33,7 @@
     "jest": "^29.3.1",
     "k6": "^0.0.0",
     "mongodb": "^4.13.0",
-    "mongoose": "^6.8.4",
+    "mongoose": "^6.9.1",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3"
   }
