--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,8 +25,8 @@ services:
       DB_NAME: SDC
     depends_on:
       - mongo_db
-    # command:
-    #   ["npm","run","seedDB"]
+    command:
+      ["npm","run","seedDB"]
     links:
       - mongo_db
 
