--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,14 +19,15 @@ services:
     volumes:
       - .:/Reviews
     environment:
+      NODE_ENV: production
       PORT: 3000
       MONGODB_URI: mongodb://mongo_db:27017
       MONGOOSE_URI: mongodb://mongo_db:27017/SDC
       DB_NAME: SDC
     depends_on:
       - mongo_db
-    # command:
-    #   ["npm","run","seedDB"]
+    command:
+      ["npm","run","seedDB"]
     links:
       - mongo_db
 
