--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,24 +12,24 @@ services:
       - mongo_db:/data/db
 
   # Node API Service
-  api:
-    build: .
-    ports:
-      - 4000:3000
-    volumes:
-      - .:/Reviews
-    environment:
-      NODE_ENV: production
-      PORT: 3000
-      MONGODB_URI: mongodb://mongo_db:27017
-      MONGOOSE_URI: mongodb://mongo_db:27017/SDC
-      DB_NAME: SDC
-    depends_on:
-      - mongo_db
-    # command:
-    #   ["npm","run","seedDB"]
-    links:
-      - mongo_db
+  # api:
+  #   build: .
+  #   ports:
+  #     - 4000:3000
+  #   volumes:
+  #     - .:/Reviews
+  #   environment:
+  #     NODE_ENV: production
+  #     PORT: 3000
+  #     MONGODB_URI: mongodb://mongo_db:27017
+  #     MONGOOSE_URI: mongodb://mongo_db:27017/SDC
+  #     DB_NAME: SDC
+  #   depends_on:
+  #     - mongo_db
+  #   # command:
+  #   #   ["npm","run","seedDB"]
+  #   links:
+  #     - mongo_db
 
 volumes:
   mongo_db: {}
